here goes nuthin'

--- a/404.html
+++ b/404.html
@@ -70,11 +70,10 @@
     </header>
 
     <div class="content">
-        <div class="marquee">Uh-oh!</div>
+                    <div class="marquee">Uh-oh!</div>
 <div class="message">
     Hmmmm. There doesn't seem to be anything here.
-</div>
-        <footer class="primary-footer">
+</div>                <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/wisdomworldtour"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
     </div>
