--- a/map/index.html
+++ b/map/index.html
@@ -70,13 +70,12 @@
     </header>
 
     <div class="content">
-        <div class="body">
+                    <div class="body">
     <iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zHQDbgFAuLwo.k6NkdkY0srIQ" height="900" style="overflow:hidden;width:100%;border:3px solid #e8e8e8;border-radius:7px;"></iframe>
 </div>
 <div class="outro">
     <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
-</div>
-        <footer class="primary-footer">
+</div>                <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/wisdomworldtour"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
     </div>
