--- a/sponsorship/index.html
+++ b/sponsorship/index.html
@@ -70,13 +70,12 @@
     </header>
 
     <div class="content">
-        <div class="marquee">Sponsorship Opportunities</div>
+                    <div class="marquee">Sponsorship Opportunities</div>
 <div class="body standard-text">
     Only through the generous support of our sponsors are we able to engage such a wide cross-section of the community without cost to the
     participating User Groups. We hope that you'll consider helping us share this experience with even more developers around the world; please
     review our <a href="/prospectus.pdf">Sponsorship Prospectus</a>.
-</div>
-        <footer class="primary-footer">
+</div>                <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/wisdomworldtour"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
     </div>
