--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -70,11 +70,10 @@
     </header>
 
     <div class="content">
-        <div class="marquee">Thank You!</div>
+                    <div class="marquee">Thank You!</div>
 <div class="body standard-text" style="margin-top:5em;margin-bottom:5em;">
     <center>Thank you for your interest in the Wisdom as a Service World Tour.  Someone will get back with you shortly.</center>
-</div>
-        <footer class="primary-footer">
+</div>                <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/wisdomworldtour"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
     </div>
