--- a/about/index.html
+++ b/about/index.html
@@ -70,7 +70,7 @@
     </header>
 
     <div class="content">
-        <div class="marquee">About the Tour</div>
+                    <div class="marquee">About the Tour</div>
 <div class="body standard-text">
     <p>The Wisdom as a Service World Tour was launched as a response to the
     <a href="//www.getpantheon.com/blog/phpworld-best-show">tremendous</a>
@@ -126,8 +126,7 @@ feelings, he's probably spending quality time with his kids, running, playing mu
 </div>    </div>
 <div class="outro">
     <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
-</div>
-        <footer class="primary-footer">
+</div>                <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/wisdomworldtour"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
     </div>
