--- a/contact/index.html
+++ b/contact/index.html
@@ -70,7 +70,7 @@
     </header>
 
     <div class="content">
-        <div class="marquee">Contact Us</div>
+                    <div class="marquee">Contact Us</div>
 <div class="body standard-text">
     Are you a:
     <ul>
@@ -96,8 +96,7 @@
 			<button type="submit" class="btn btn-default" value="Send">Submit</button>
 		</div>
 	</form>
-</div>
-        <footer class="primary-footer">
+</div>                <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/wisdomworldtour"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
     </div>
