--- a/events/index.html
+++ b/events/index.html
@@ -70,7 +70,7 @@
     </header>
 
     <div class="content">
-        <div class="marquee">Tour Events</div>
+                    <div class="marquee">Tour Events</div>
 <div class="body">
     <div class="event-section">Upcoming</div>
                         <div class="row appearance">
@@ -196,15 +196,6 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willr
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
-			March 3, 2015
-		</div>
-		<div class="col-md-9 appearance-details">
-						<p class="appearance-details__event">Lakewood Web Developers Meetup
-						<div class="appearance-details__location">Lakewood, New Jersey</div>
-			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
-		</div>
-    </div>                        <div class="row appearance">
-		<div class="col-md-3 text-right appearance-date">
 			March 10, 2015
 		</div>
 		<div class="col-md-9 appearance-details">
@@ -275,8 +266,7 @@ Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop - Yitzchok Willroth
     </div>        </div>
 <div class="outro">
     <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
-</div>
-        <footer class="primary-footer">
+</div>                <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/wisdomworldtour"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
     </div>
