--- a/faq/index.html
+++ b/faq/index.html
@@ -70,12 +70,13 @@
     </header>
 
     <div class="content">
-        <div class="marquee">Frequently Asked Questions</div>
+                    <div class="marquee">Frequently Asked Questions</div>
 <div class="body">
     <dl class="faq">
                     
 <dt>So what&#039;s with the crazy penguin?</dt>
-<dd>That's not a (mere) penguin, that's <a href="//twitter.com/@coderabbi">@coderabbi</a>, the Tour's <a href="/about">organizer</a>.</dd>
+<dd>That's not a (mere) penguin, that's <a href="//twitter.com/@coderabbi">@coderabbi</a>, the Tour's <a href="/about">organizer</a>.
+</dd>
                     
 <dt>Wisdom? Really!?</dt>
 <dd>Okay, we have to admit that there's an element of whimsy there, but a conversation about Community, Software Craftsmanship, 
@@ -98,8 +99,7 @@ reach out to us</a> and tell us about your message.
 <div class="outro">
     <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
 </div>
-
-        <footer class="primary-footer">
+                <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/wisdomworldtour"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
     </div>
