--- a/_posts/berlin-php/index.html
+++ b/_posts/berlin-php/index.html
@@ -1,11 +1,11 @@
-                                                                                                <div class="row appearance" style="font-size:20px; margin-left:-100px">
-                <div class="col-md-3 text-right appearance-date">
-                    January 28, 2015
-                </div>
-                <div class="col-md-9 appearance-details">
-                                        <p class="appearance-details__event">Berlin PHP User Group
-                                        <div class="appearance-details__location">Berlin, Germany</div>
-                    <p class="appearance-details__title">Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willroth</p>
-                </div>
-            </div>
-                                                                                                                                                                                    
+<pre><code>                                    &lt;div class="row appearance" style="font-size:20px; margin-left:-100px"&gt;
+            &lt;div class="col-md-3 text-right appearance-date"&gt;
+                January 28, 2015
+            &lt;/div&gt;
+            &lt;div class="col-md-9 appearance-details"&gt;
+                                &lt;p class="appearance-details__event"&gt;Berlin PHP User Group
+                                &lt;div class="appearance-details__location"&gt;Berlin, Germany&lt;/div&gt;
+                &lt;p class="appearance-details__title"&gt;Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willroth&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+                                                        </code></pre>
