--- a/_posts/brighton-php/index.html
+++ b/_posts/brighton-php/index.html
@@ -1,11 +1,11 @@
-                                                                                                                                    <div class="row appearance" style="font-size:20px; margin-left:-100px">
-                <div class="col-md-3 text-right appearance-date">
-                    February 16, 2015
-                </div>
-                <div class="col-md-9 appearance-details">
-                                        <p class="appearance-details__event">Brighton PHP User Group
-                                        <div class="appearance-details__location">Brighton, England</div>
-                    <p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
-                </div>
-            </div>
-                                                                                                                                                
+<pre><code>                                                &lt;div class="row appearance" style="font-size:20px; margin-left:-100px"&gt;
+            &lt;div class="col-md-3 text-right appearance-date"&gt;
+                February 16, 2015
+            &lt;/div&gt;
+            &lt;div class="col-md-9 appearance-details"&gt;
+                                &lt;p class="appearance-details__event"&gt;Brighton PHP User Group
+                                &lt;div class="appearance-details__location"&gt;Brighton, England&lt;/div&gt;
+                &lt;p class="appearance-details__title"&gt;Talk: TBD - Yitzchok Willroth&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+                                            </code></pre>
