--- a/_posts/confoo/index.html
+++ b/_posts/confoo/index.html
@@ -1,13 +1,13 @@
-                                                                                                                                                            <div class="row appearance" style="font-size:20px; margin-left:-100px">
-                <div class="col-md-3 text-right appearance-date">
-                    February 20, 2015
-                </div>
-                <div class="col-md-9 appearance-details">
-                                        <p class="appearance-details__event">ConFoo Conference
-                                        <div class="appearance-details__location">Montreal, Canada</div>
-                    <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth<br>
+<pre><code>                                                        &lt;div class="row appearance" style="font-size:20px; margin-left:-100px"&gt;
+            &lt;div class="col-md-3 text-right appearance-date"&gt;
+                February 20, 2015
+            &lt;/div&gt;
+            &lt;div class="col-md-9 appearance-details"&gt;
+                                &lt;p class="appearance-details__event"&gt;ConFoo Conference
+                                &lt;div class="appearance-details__location"&gt;Montreal, Canada&lt;/div&gt;
+                &lt;p class="appearance-details__title"&gt;Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth<br>
 Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willroth
-</p>
-                </div>
-            </div>
-                                                                                                                        
+&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+                                    </code></pre>
