--- a/_posts/glasgow-php/index.html
+++ b/_posts/glasgow-php/index.html
@@ -1,11 +1,11 @@
-                                                                                                                        <div class="row appearance" style="font-size:20px; margin-left:-100px">
-                <div class="col-md-3 text-right appearance-date">
-                    February 11, 2015
-                </div>
-                <div class="col-md-9 appearance-details">
-                                        <p class="appearance-details__event">Glasgow PHP User Group
-                                        <div class="appearance-details__location">Glasgow, Scotland</div>
-                    <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
-                </div>
-            </div>
-                                                                                                                                                            
+<pre><code>                                            &lt;div class="row appearance" style="font-size:20px; margin-left:-100px"&gt;
+            &lt;div class="col-md-3 text-right appearance-date"&gt;
+                February 11, 2015
+            &lt;/div&gt;
+            &lt;div class="col-md-9 appearance-details"&gt;
+                                &lt;p class="appearance-details__event"&gt;Glasgow PHP User Group
+                                &lt;div class="appearance-details__location"&gt;Glasgow, Scotland&lt;/div&gt;
+                &lt;p class="appearance-details__title"&gt;Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+                                                </code></pre>
