--- a/_posts/lonestar-php/index.html
+++ b/_posts/lonestar-php/index.html
@@ -1,13 +1,13 @@
-                                                                                                                                                                                                                                                            <div class="row appearance" style="font-size:20px; margin-left:-100px">
-                <div class="col-md-3 text-right appearance-date">
-                    April 16, 2015
-                </div>
-                <div class="col-md-9 appearance-details">
-                                        <p class="appearance-details__event">LoneStar PHP Conference
-                                        <div class="appearance-details__location">Addison, Texas</div>
-                    <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth<br>
+<pre><code>                                                                                    &lt;div class="row appearance" style="font-size:20px; margin-left:-100px"&gt;
+            &lt;div class="col-md-3 text-right appearance-date"&gt;
+                April 16, 2015
+            &lt;/div&gt;
+            &lt;div class="col-md-9 appearance-details"&gt;
+                                &lt;p class="appearance-details__event"&gt;LoneStar PHP Conference
+                                &lt;div class="appearance-details__location"&gt;Addison, Texas&lt;/div&gt;
+                &lt;p class="appearance-details__title"&gt;Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth<br>
 Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop - Yitzchok Willroth & Jeff Carouth
-</p>
-                </div>
-            </div>
-                        
+&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+        </code></pre>
