--- a/_posts/midwest-php/index.html
+++ b/_posts/midwest-php/index.html
@@ -1,13 +1,13 @@
-                                                                                                                                                                                                                                    <div class="row appearance" style="font-size:20px; margin-left:-100px">
-                <div class="col-md-3 text-right appearance-date">
-                    March 15, 2015
-                </div>
-                <div class="col-md-9 appearance-details">
-                                        <p class="appearance-details__event">Midwest PHP Conference
-                                        <div class="appearance-details__location">Minneapolis, Minnesota</div>
-                    <p class="appearance-details__title">Talk: Get Off the Freelance Roller-Coaster - Yitzchok Willroth<br>
+<pre><code>                                                                            &lt;div class="row appearance" style="font-size:20px; margin-left:-100px"&gt;
+            &lt;div class="col-md-3 text-right appearance-date"&gt;
+                March 15, 2015
+            &lt;/div&gt;
+            &lt;div class="col-md-9 appearance-details"&gt;
+                                &lt;p class="appearance-details__event"&gt;Midwest PHP Conference
+                                &lt;div class="appearance-details__location"&gt;Minneapolis, Minnesota&lt;/div&gt;
+                &lt;p class="appearance-details__title"&gt;Talk: Get Off the Freelance Roller-Coaster - Yitzchok Willroth<br>
 Talk: Inside Laravel 5.0 - Yitzchok Willroth
-</p>
-                </div>
-            </div>
-                                                
+&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+                </code></pre>
