--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </header>
 
     <div class="content">
-        <div class="hero">
+                    <div class="hero">
     <img src="/assets/img/logo.png" alt="Wisdom as a Service">
 </div>
 
@@ -94,8 +94,7 @@
 
 <div class="outro">
     <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
-</div>
-        <footer class="primary-footer">
+</div>                <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/wisdomworldtour"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
     </div>
