--- a/_posts/february-events/index.html
+++ b/_posts/february-events/index.html
@@ -1,63 +1,64 @@
-<pre><code>                                        &lt;div class="row appearance" style="font-size:20px; margin-left:-100px"&gt;
-            &lt;div class="col-md-3 text-right appearance-date"&gt;
-                February 9, 2015
-            &lt;/div&gt;
-            &lt;div class="col-md-9 appearance-details"&gt;
-                                &lt;p class="appearance-details__event"&gt;Dublin PHP User Group
-                                &lt;div class="appearance-details__location"&gt;Dublin, Ireland&lt;/div&gt;
-                &lt;p class="appearance-details__title"&gt;Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth&lt;/p&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-                &lt;div class="row appearance" style="font-size:20px; margin-left:-100px"&gt;
-            &lt;div class="col-md-3 text-right appearance-date"&gt;
-                February 11, 2015
-            &lt;/div&gt;
-            &lt;div class="col-md-9 appearance-details"&gt;
-                                &lt;p class="appearance-details__event"&gt;Glasgow PHP User Group
-                                &lt;div class="appearance-details__location"&gt;Glasgow, Scotland&lt;/div&gt;
-                &lt;p class="appearance-details__title"&gt;Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth&lt;/p&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-                &lt;div class="row appearance" style="font-size:20px; margin-left:-100px"&gt;
-            &lt;div class="col-md-3 text-right appearance-date"&gt;
-                February 16, 2015
-            &lt;/div&gt;
-            &lt;div class="col-md-9 appearance-details"&gt;
-                                &lt;p class="appearance-details__event"&gt;Brighton PHP User Group
-                                &lt;div class="appearance-details__location"&gt;Brighton, England&lt;/div&gt;
-                &lt;p class="appearance-details__title"&gt;Talk: TBD - Yitzchok Willroth&lt;/p&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-                &lt;div class="row appearance" style="font-size:20px; margin-left:-100px"&gt;
-            &lt;div class="col-md-3 text-right appearance-date"&gt;
-                February 17, 2015
-            &lt;/div&gt;
-            &lt;div class="col-md-9 appearance-details"&gt;
-                                &lt;p class="appearance-details__event"&gt;Warwickshire PHP User Group
-                                &lt;div class="appearance-details__location"&gt;Warwickshire, England&lt;/div&gt;
-                &lt;p class="appearance-details__title"&gt;Talk: TBD - Yitzchok Willroth&lt;/p&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-                &lt;div class="row appearance" style="font-size:20px; margin-left:-100px"&gt;
-            &lt;div class="col-md-3 text-right appearance-date"&gt;
-                February 20, 2015
-            &lt;/div&gt;
-            &lt;div class="col-md-9 appearance-details"&gt;
-                                &lt;p class="appearance-details__event"&gt;ConFoo Conference
-                                &lt;div class="appearance-details__location"&gt;Montreal, Canada&lt;/div&gt;
-                &lt;p class="appearance-details__title"&gt;Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth<br>
+<p><a></a>
+                                                                                                            <div class="row appearance" style="font-size:20px; margin-left:-100px">
+                <div class="col-md-3 text-right appearance-date">
+                    February 9, 2015
+                </div>
+                <div class="col-md-9 appearance-details">
+                                        <p class="appearance-details__event">Dublin PHP User Group
+                                        <div class="appearance-details__location">Dublin, Ireland</div>
+                    <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
+                </div>
+            </div>
+                                <div class="row appearance" style="font-size:20px; margin-left:-100px">
+                <div class="col-md-3 text-right appearance-date">
+                    February 11, 2015
+                </div>
+                <div class="col-md-9 appearance-details">
+                                        <p class="appearance-details__event">Glasgow PHP User Group
+                                        <div class="appearance-details__location">Glasgow, Scotland</div>
+                    <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
+                </div>
+            </div>
+                                <div class="row appearance" style="font-size:20px; margin-left:-100px">
+                <div class="col-md-3 text-right appearance-date">
+                    February 16, 2015
+                </div>
+                <div class="col-md-9 appearance-details">
+                                        <p class="appearance-details__event">Brighton PHP User Group
+                                        <div class="appearance-details__location">Brighton, England</div>
+                    <p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
+                </div>
+            </div>
+                                <div class="row appearance" style="font-size:20px; margin-left:-100px">
+                <div class="col-md-3 text-right appearance-date">
+                    February 17, 2015
+                </div>
+                <div class="col-md-9 appearance-details">
+                                        <p class="appearance-details__event">Warwickshire PHP User Group
+                                        <div class="appearance-details__location">Warwickshire, England</div>
+                    <p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
+                </div>
+            </div>
+                                <div class="row appearance" style="font-size:20px; margin-left:-100px">
+                <div class="col-md-3 text-right appearance-date">
+                    February 20, 2015
+                </div>
+                <div class="col-md-9 appearance-details">
+                                        <p class="appearance-details__event">ConFoo Conference
+                                        <div class="appearance-details__location">Montreal, Canada</div>
+                    <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth<br>
 Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willroth
-&lt;/p&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-                &lt;div class="row appearance" style="font-size:20px; margin-left:-100px"&gt;
-            &lt;div class="col-md-3 text-right appearance-date"&gt;
-                February 24, 2015
-            &lt;/div&gt;
-            &lt;div class="col-md-9 appearance-details"&gt;
-                                &lt;p class="appearance-details__event"&gt;New York PHP User Group
-                                &lt;div class="appearance-details__location"&gt;New York, New York&lt;/div&gt;
-                &lt;p class="appearance-details__title"&gt;Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth&lt;/p&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-                                </code></pre>
+</p>
+                </div>
+            </div>
+                                <div class="row appearance" style="font-size:20px; margin-left:-100px">
+                <div class="col-md-3 text-right appearance-date">
+                    February 24, 2015
+                </div>
+                <div class="col-md-9 appearance-details">
+                                        <p class="appearance-details__event">New York PHP User Group
+                                        <div class="appearance-details__location">New York, New York</div>
+                    <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
+                </div>
+            </div>
+                                                                                                </p>
