--- a/about/index.html
+++ b/about/index.html
@@ -91,7 +91,7 @@
 </div>
 <div class="marquee">About the Organizer</div>
 <div class="body standard-text">
-    <p><span style="font-weight:400">Yitzchok Willroth</span> is a Talmudic scholar and independent web application engineer, consultant and coach living in Lakewood, New Jersey.</p>
+    <p><span style="font-weight:400" id="yitzchok-willroth">Yitzchok Willroth</span> is a Talmudic scholar and independent web application engineer, consultant and coach living in Lakewood, New Jersey.</p>
     <p>A start-up veteran, dev bootcamp instructor and frequent conference speaker, Yitzchok is the founder & organizer of the <a href="//shorephp.org">ShorePHP User Group</a>, a co-organizer of the <a href="//nyphp.org">NYPHP User Group</a>, and an active participant in the <a href="//phpmentoring.org">PHPMentoring Initiative.</a></p>
     <p>Passionate about clean code and robust application architecture, he is also a strong proponent of remote teams as a way for software organizations to thrive while affording developers a healthy work:life balance.</p>
     <p>You can see his open-source contributions on <a href="//github.com/coderabbi">github</a> and follow him on <a href="//twitter.com/coderabbi">twitter</a>; you may find him frequently in <a href="//webchat.freenode.net">FreenodeIRC</a>:#coderabbi.</p>
@@ -99,7 +99,7 @@
 <div class="marquee">About the Speakers</div>
 <div class="body standard-text">
              <div class="speaker">
-    <span style="font-weight:400">Ed Finkler</span>, also known as <a href="//twitter.com/funkatron">Funkatron</a>, started making web sites before 
+            <a href="/speakers/ed-finkler" style="font-weight:400" id="ed-finkler">Ed Finkler</a>, also known as <a href="//twitter.com/funkatron">Funkatron</a>, started making web sites before 
 browsers had frames. He does front-end and server-side work in Python, PHP, and JavaScript. He served as web 
 lead and security researcher at <a href="//www.cerias.purdue.edu">The Center for Education and Research 
 in Information Assurance and Security (CERIAS)</a> at Purdue University for 9 years, and he's 
@@ -109,8 +109,8 @@ in the tech community with his <a href="//funkatron.com/osmi">Open Sourcing Ment
 He is part of <a href="//prompt.engineyard.com">Engine Yard's Prompt</a> campaign. Ed writes at <a href="//funkatron.com">
 funkatron.com</a>.
 
-</div>            <div class="speaker">
-    <span style="font-weight:400">Jeff Carouth</span> is a web application developer honing his programming and skiing 
+    </div>            <div class="speaker">
+            <a href="/speakers/jeff-carouth" style="font-weight:400" id="jeff-carouth">Jeff Carouth</a> is a web application developer honing his programming and skiing 
 skills at <a href="//liftopia.com">Liftopia</a>. He is an active member of the PHP community, speaker, co-organizer of 
 <a href="//www.meetup.com/bcsphp/">BCSPHP</a>, and co-host of the <a href="//looselycoupled.info">Loosely Coupled 
 podcast</a>. He believes quality code, testing, and automation are necessary ingredients in a recipe for a successful 
@@ -118,12 +118,12 @@ software project. When not hacking away at code he is a father and husband, beer
 photographer. Follow Jeff on Twitter as <a href='//twitter.com/@jcarouth'>jcarouth</a> or read his blog at 
 <a href="//carouth.com">carouth.com</a>.
 
-</div>            <div class="speaker">
-    <span style="font-weight:400">Matt Frost</span> is a software engineer who's been writing code since he was a teenager. He's involved in the <a href="//phpmentoring.org">
+    </div>            <div class="speaker">
+            <a href="/speakers/matt-frost" style="font-weight:400" id="matt-frost">Matt Frost</a> is a software engineer who's been writing code since he was a teenager. He's involved in the <a href="//phpmentoring.org">
 PHPMentoring Initiative</a> and loves meeting people in the community. When he's not ranting about Agile, OAuth, Testing or his 
 feelings, he's probably spending quality time with his kids, running, playing music or eating a burrito.
 
-</div>    </div>
+    </div>    </div>
 <div class="outro">
     <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
 </div>                <footer class="primary-footer">
