--- a/speakers/ed-finkler/index.html
+++ b/speakers/ed-finkler/index.html
@@ -70,7 +70,19 @@
     </header>
 
     <div class="content">
-                                    <footer class="primary-footer">
+                <div class="speaker">
+            <div class="marquee" style="margin-bottom:.67em">Ed Finkler</div>
+        <div class="body standard-text"><a href="/speakers/ed-finkler" style="font-weight:400" id="ed-finkler">Ed Finkler</a>, also known as <a href="//twitter.com/funkatron">Funkatron</a>, started making web sites before 
+browsers had frames. He does front-end and server-side work in Python, PHP, and JavaScript. He served as web 
+lead and security researcher at <a href="//www.cerias.purdue.edu">The Center for Education and Research 
+in Information Assurance and Security (CERIAS)</a> at Purdue University for 9 years, and he's 
+an partner emeritus of <a href="//fictivekin.com">Fictive Kin</a>. Along with Chris Hartjes, Ed is co-host of 
+the <a hrf="//devhell.info">Development Hell podcast</a>. Ed's current passion is raising mental health awareness 
+in the tech community with his <a href="//funkatron.com/osmi">Open Sourcing Mental Illness</a> speaking campaign. 
+He is part of <a href="//prompt.engineyard.com">Engine Yard's Prompt</a> campaign. Ed writes at <a href="//funkatron.com">
+funkatron.com</a>.
+</div>
+    </div>        <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/wisdomworldtour"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
     </div>
