--- a/speakers/matt-frost/index.html
+++ b/speakers/matt-frost/index.html
@@ -70,7 +70,13 @@
     </header>
 
     <div class="content">
-                                    <footer class="primary-footer">
+                <div class="speaker">
+            <div class="marquee" style="margin-bottom:.67em">Matt Frost</div>
+        <div class="body standard-text"><a href="/speakers/matt-frost" style="font-weight:400" id="matt-frost">Matt Frost</a> is a software engineer who's been writing code since he was a teenager. He's involved in the <a href="//phpmentoring.org">
+PHPMentoring Initiative</a> and loves meeting people in the community. When he's not ranting about Agile, OAuth, Testing or his 
+feelings, he's probably spending quality time with his kids, running, playing music or eating a burrito.
+</div>
+    </div>        <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/wisdomworldtour"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
     </div>
