--- a/_posts/shore-php/index.html
+++ b/_posts/shore-php/index.html
@@ -1,13 +1,15 @@
-<pre><code>            &lt;div class="row appearance" style="font-size:20px; margin-left:-100px"&gt;
-            &lt;div class="col-md-3 text-right appearance-date"&gt;
-                January 12, 2015
-            &lt;/div&gt;
-            &lt;div class="col-md-9 appearance-details"&gt;
-                                &lt;p class="appearance-details__event"&gt;ShorePHP User Group (Tour Kickoff Event)
-                                &lt;div class="appearance-details__location"&gt;Asbury Park, New Jersey&lt;/div&gt;
-                &lt;p class="appearance-details__title"&gt;Talk: Open Sourcing Mental Illness - Ed Finkler (remote)<br>
+<p>Of course we're going to kick off the Tour in our backyard!
+<br>
+                        <div class="row appearance" style="font-size:20px; margin-left:-100px">
+                <div class="col-md-3 text-right appearance-date">
+                    January 12, 2015
+                </div>
+                <div class="col-md-9 appearance-details">
+                                        <p class="appearance-details__event">ShorePHP User Group (Tour Kickoff Event)
+                                        <div class="appearance-details__location">Asbury Park, New Jersey</div>
+                    <p class="appearance-details__title">Talk: Open Sourcing Mental Illness - Ed Finkler (remote)<br>
 Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth
-&lt;/p&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-                                                                                </code></pre>
+</p>
+                </div>
+            </div>
+                                                                                                                                                                                                                                                </p>
