--- a/events/index.html
+++ b/events/index.html
@@ -89,7 +89,9 @@ Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth
 			January 20, 2015
 		</div>
 		<div class="col-md-9 appearance-details">
+						<a href="//www.meetup.com/PHP-FRL/events/219376841/">
 						<p class="appearance-details__event">Frysian PHP User Group
+						</a>
 						<div class="appearance-details__location">Leeuwarden, Netherlands</div>
 			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
 		</div>
@@ -98,7 +100,9 @@ Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth
 			January 21, 2015
 		</div>
 		<div class="col-md-9 appearance-details">
+						<a href="//www.meetup.com/Brussels-PHP-Meetup/events/219328777/">
 						<p class="appearance-details__event">Brussels PHP User Group (UG Launch Event)
+						</a>
 						<div class="appearance-details__location">Brussels, Belgium</div>
 			<p class="appearance-details__title">Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willroth</p>
 		</div>
@@ -134,7 +138,9 @@ Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth
 			January 28, 2015
 		</div>
 		<div class="col-md-9 appearance-details">
+						<a href="//www.bephpug.de">
 						<p class="appearance-details__event">Berlin PHP User Group
+						</a>
 						<div class="appearance-details__location">Berlin, Germany</div>
 			<p class="appearance-details__title">Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willroth</p>
 		</div>
@@ -199,7 +205,9 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willr
 			March 10, 2015
 		</div>
 		<div class="col-md-9 appearance-details">
+						<a href="//www.meetup.com/Milwaukee-PHP-Users-Group/events/219782008">
 						<p class="appearance-details__event">Milwaukee PHP User Group
+						</a>
 						<div class="appearance-details__location">Milwaukee, Wisconsin</div>
 			<p class="appearance-details__title">Talk: Inside Laravel 5 - Yitzchok Willroth</p>
 		</div>
