--- a/events/index.html
+++ b/events/index.html
@@ -92,7 +92,7 @@ Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth
 						<a href="//www.meetup.com/PHP-FRL/events/219376841/">
 						<p class="appearance-details__event">Frysian PHP User Group
 						</a>
-						<div class="appearance-details__location">Leeuwarden, Netherlands</div>
+						<div class="appearance-details__location">Heerenveen, Netherlands</div>
 			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
 		</div>
     </div>                        <div class="row appearance">
