--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -179,6 +179,7 @@
             <div class="community-bottom">
                 <div class="col-lg-3 community-column">
                     <ul class="circle">
+                        <li>Steven Woodson</li>
                     </ul>
                 </div>
                 <div class="col-lg-3 community-column">
