--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -179,7 +179,7 @@
             <div class="community-bottom">
                 <div class="col-lg-3 community-column">
                     <ul class="circle">
-                        <li>Steven Woodson</li>
+                        <li>Steven Woodson<a href="//twitter.com/@stevenwoodson">&nbsp;<i class="fa fa-twitter primary-footer__social" style="font-size:.7em"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 community-column">
