--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -184,6 +184,7 @@
                 </div>
                 <div class="col-lg-3 community-column">
                     <ul class="circle">
+                        <li>David Bishop<a href="//twitter.com/@gnuconsulting">&nbsp;<i class="fa fa-twitter primary-footer__social" style="font-size:.7em"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 community-column">
