--- a/_posts/brighton-php/index.html
+++ b/_posts/brighton-php/index.html
@@ -5,7 +5,7 @@
             &lt;div class="col-md-9 appearance-details"&gt;
                                 &lt;p class="appearance-details__event"&gt;Brighton PHP User Group
                                 &lt;div class="appearance-details__location"&gt;Brighton, England&lt;/div&gt;
-                &lt;p class="appearance-details__title"&gt;Talk: TBD - Yitzchok Willroth&lt;/p&gt;
+                &lt;p class="appearance-details__title"&gt;Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth&lt;/p&gt;
             &lt;/div&gt;
         &lt;/div&gt;
-                                                </code></pre>
+                                                                </code></pre>
