--- a/_posts/february-events/index.html
+++ b/_posts/february-events/index.html
@@ -26,7 +26,7 @@
                 <div class="col-md-9 appearance-details">
                                         <p class="appearance-details__event">Brighton PHP User Group
                                         <div class="appearance-details__location">Brighton, England</div>
-                    <p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
+                    <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
                 </div>
             </div>
                                 <div class="row appearance" style="font-size:20px; margin-left:-100px">
@@ -36,7 +36,17 @@
                 <div class="col-md-9 appearance-details">
                                         <p class="appearance-details__event">Warwickshire PHP User Group
                                         <div class="appearance-details__location">Warwickshire, England</div>
-                    <p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
+                    <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
+                </div>
+            </div>
+                                <div class="row appearance" style="font-size:20px; margin-left:-100px">
+                <div class="col-md-3 text-right appearance-date">
+                    February 19, 2015
+                </div>
+                <div class="col-md-9 appearance-details">
+                                        <p class="appearance-details__event">PHP UK Conference
+                                        <div class="appearance-details__location">London, England</div>
+                    <p class="appearance-details__title">Keynote: Everything that I Really Needde to Know, I learned in Rabbinical School - Yitzchok Willroth</p>
                 </div>
             </div>
                                 <div class="row appearance" style="font-size:20px; margin-left:-100px">
@@ -46,9 +56,7 @@
                 <div class="col-md-9 appearance-details">
                                         <p class="appearance-details__event">ConFoo Conference
                                         <div class="appearance-details__location">Montreal, Canada</div>
-                    <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth<br>
-Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willroth
-</p>
+                    <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
                 </div>
             </div>
                                 <div class="row appearance" style="font-size:20px; margin-left:-100px">
@@ -61,4 +69,4 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willr
                     <p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
                 </div>
             </div>
-                                                                                                            </p>
+                                                                                                                                                </p>
