--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -95,7 +95,7 @@
     </div>
     <div class="sponsor-grid row">
         <div class="col-lg-3"><div class="sponsor-image-top four-col" style="padding-top:2px; padding-bottom:6px;"><a href="//www.phparch.com/"><img src="/assets/img/sponsors/architect.png"></a></div><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col" style="padding-top:52px; padding-bottom:46px;"><a href="//intuit.be/"><img src="/assets/img/sponsors/in2it.png"></a></div><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col" style="padding-top:52px; padding-bottom:46px;"><a href="//in2it.be/"><img src="/assets/img/sponsors/in2it.png"></a></div><div class="sponsor-image-bottom silver">Patron</div></div>
         <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
         <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
     </div>
