--- a/_posts/php-tek/index.html
+++ b/_posts/php-tek/index.html
@@ -1,11 +1,1 @@
-<pre><code>                                                                                            &lt;div class="row appearance" style="font-size:20px; margin-left:-100px"&gt;
-            &lt;div class="col-md-3 text-right appearance-date"&gt;
-                May 21, 2015
-            &lt;/div&gt;
-            &lt;div class="col-md-9 appearance-details"&gt;
-                                &lt;p class="appearance-details__event"&gt;php[tek] Conference
-                                &lt;div class="appearance-details__location"&gt;Chicago, Illinois&lt;/div&gt;
-                &lt;p class="appearance-details__title"&gt;Keynote: Everything I Needed to Know, I learned in Rabbinical School - Yitzchok Willroth&lt;/p&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-    </code></pre>
+<pre><code>                                                                                                    </code></pre>
