--- a/_posts/symfony-cologne/index.html
+++ b/_posts/symfony-cologne/index.html
@@ -1,11 +1,1 @@
-<pre><code>                            &lt;div class="row appearance" style="font-size:20px; margin-left:-100px"&gt;
-            &lt;div class="col-md-3 text-right appearance-date"&gt;
-                January 26, 2015
-            &lt;/div&gt;
-            &lt;div class="col-md-9 appearance-details"&gt;
-                                &lt;p class="appearance-details__event"&gt;Koln Symfony User Group
-                                &lt;div class="appearance-details__location"&gt;Cologne, Germany&lt;/div&gt;
-                &lt;p class="appearance-details__title"&gt;Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth&lt;/p&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-                                                                    </code></pre>
+<pre><code>                                                                                                    </code></pre>
