--- a/events/phptek/index.html
+++ b/events/phptek/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-            Keynote: Everything I Needed to Know, I learned in Rabbinical School - Yitzchok Willroth
+            Keynote: Everything I Needed to Know, I learned in Rabbinical School - Yitzchok Willroth&lt;br&gt;
 Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop - Yitzchok Willroth 
  &middot; Wisdom as a Service
     </title>    <meta name="twitter:card" content="summary">
