--- a/events/index.html
+++ b/events/index.html
@@ -179,7 +179,7 @@ Talk: The Human Side of Software: Managing Cognitive Bias - Yitzchok Willroth
 		<div class="col-md-9 appearance-details">
 							<p class="appearance-details__event">php[tek] Conference
 						<div class="appearance-details__location">Chicago, Illinois</div>
-			<p class="appearance-details__title">Keynote: Everything I Needed to Know, I learned in Rabbinical School - Yitzchok Willroth<br>
+			<p class="appearance-details__title">Keynote: Everything I Needed to Know, I Learned in Rabbinical School - Yitzchok Willroth<br>
 Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop - Yitzchok Willroth 
 </p>
 		</div>
@@ -209,7 +209,7 @@ Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop - Yitzchok Willroth
 		<div class="col-md-9 appearance-details">
 							<p class="appearance-details__event">PHP UK Conference
 						<div class="appearance-details__location">London, England</div>
-			<p class="appearance-details__title">Keynote: Everything that I Really Needde to Know, I learned in Rabbinical School - Yitzchok Willroth</p>
+			<p class="appearance-details__title">Keynote: Everything  I Really Needed to Know, I Learned in Rabbinical School - Yitzchok Willroth</p>
 		</div>
     </div>                                                    <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
