--- a/_posts/february-events/index.html
+++ b/_posts/february-events/index.html
@@ -46,7 +46,7 @@
                 <div class="col-md-9 appearance-details">
                                         <p class="appearance-details__event">PHP UK Conference
                                         <div class="appearance-details__location">London, England</div>
-                    <p class="appearance-details__title">Keynote: Everything that I Really Needde to Know, I learned in Rabbinical School - Yitzchok Willroth</p>
+                    <p class="appearance-details__title">Keynote: Everything  I Really Needed to Know, I Learned in Rabbinical School - Yitzchok Willroth</p>
                 </div>
             </div>
                                 <div class="row appearance" style="font-size:20px; margin-left:-100px">
