--- a/events/index.html
+++ b/events/index.html
@@ -144,6 +144,15 @@ Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop - Yitzchok Willroth
 		</div>
     </div>                                                    <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
+							April 22, 2015
+					</div>
+		<div class="col-md-9 appearance-details">
+							<p class="appearance-details__event">Atlanta PHP User Group
+						<div class="appearance-details__location">Atlanta, Georgia</div>
+			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
+		</div>
+    </div>                                                    <div class="row appearance">
+		<div class="col-md-3 text-right appearance-date">
 							May 8, 2015
 					</div>
 		<div class="col-md-9 appearance-details">
@@ -184,7 +193,7 @@ Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop - Yitzchok Willroth
 </p>
 		</div>
     </div>                        <div class="event-section">Past</div>
-                                                                                                                                                                                                                                                                    <div class="row appearance">
+                                                                                                                                                                                                                                                                                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
 							February 24, 2015
 					</div>
@@ -319,7 +328,7 @@ Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth
 </p>
 		</div>
     </div>                        <!--<div class="event-section">Planned</div>-->
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            </div>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                </div>
 <div class="outro">
     <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
 </div>                <footer class="primary-footer">
