--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -80,15 +80,6 @@
         <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div><div class="sponsor-image-bottom platinum">Partner</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div><div class="sponsor-image-bottom platinum">Partner</div></div>
-        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div><div class="sponsor-image-bottom platinum">Partner</div></div>
-    </div>
-    <div class="sponsor-grid row">
-        <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div><div class="sponsor-image-bottom gold">Sustainer</div></div>
-        <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div><div class="sponsor-image-bottom gold">Sustainer</div></div>
-        <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div><div class="sponsor-image-bottom gold">Sustainer</div></div>
-    </div>
-    <div class="sponsor-grid row">
         <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div><div class="sponsor-image-bottom gold">Sustainer</div></div>
         <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div><div class="sponsor-image-bottom gold">Sustainer</div></div>
         <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div><div class="sponsor-image-bottom gold">Sustainer</div></div>
@@ -100,31 +91,19 @@
         <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
-    </div>
-    <div class="sponsor-grid row">
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
-    </div>
-    <div class="sponsor-grid row">
         <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:52px; padding-bottom:52px"><a href="//conference.phpbenelux.eu/2015/"><img src="/assets/img/sponsors/benelux.png"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
         <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:60px; padding-bottom:60px; padding-left:5px; padding-right:5px"><a href="//http://confoo.ca/"><img src="/assets/img/sponsors/confoo.gif"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
         <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:10px; padding-bottom:9px"><a href="//lonestarphp.com/"><img src="/assets/img/sponsors/lonestar.png" style="height:130px"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
         <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:10px; padding-bottom:9px"><a href="//2015.midwestphp.org/"><img src="/assets/img/sponsors/midwest.png" style="height:130px"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
         <div class="col-lg-2"><div class="sponsor-image-top six-col"style="padding-top:44px; padding-bottom:44px"><a href="//tek.phparch.com/"><img src="/assets/img/sponsors/tek.png" style=""></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col"style="padding-top:24px; padding-bottom:24px"><a href="//phpconference.co.uk/"><img src="/assets/img/sponsors/phpuk.png" style="width:145px"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
     </div>
     <div class="sponsor-grid row">
         <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:2px; padding-bottom:3px"><a href="//karaniapp.com"><img src="/assets/img/sponsors/karani.png"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col"style="padding-top:31px; padding-bottom:32px"><a href="//www.brandonsavage.net"><img src="/assets/img/sponsors/tailwinds.png"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col"style="padding-top:40px; padding-bottom:41px"><a href="//phpday.it"><img src="/assets/img/sponsors/phpday.png" style="width:160px"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col"style="padding-top:27px; padding-bottom:25px"><a href="//laracon.us/"><img src="/assets/img/sponsors/laraconus.png"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col"style="padding-top:60px; padding-bottom:60px"><a href="//www.openwest.org/"><img src="/assets/img/sponsors/openwest.png" style="width:160px"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
         <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
     </div>
     <div class="sponsor-grid row">
@@ -143,7 +122,7 @@
         <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:3px;padding-bottom:3px;"><a href="//thatpodcast.io"><img src="/assets/img/sponsors/thatpodcast.jpg" style="height:142px"></a></div>
             <div class="sponsor-image-bottom copper">Backer</div>
         </div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:40px;padding-bottom:39px;"><a href="//laravel.io"><img src="/assets/img/sponsors/laravelio.png"></a></div>
             <div class="sponsor-image-bottom copper">Backer</div>
         </div>
     </div>
