--- a/events/artisanconf/index.html
+++ b/events/artisanconf/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-            Talk: TBD - Yitzchok Willroth &middot; Wisdom as a Service
+            Talk: TBD - Yitzchok Willroth&lt;br&gt; &middot; Wisdom as a Service
     </title>    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@wisdomtour">
     <meta name="twitter:creator" content="@wisdomtour">
@@ -40,6 +40,7 @@
     <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script src="/assets/js/jquery.bxslider.js"></script>
+    <script src="/assets/js/site.js"></script>
 </head>
 <body>
 <div class="container">
