--- a/feedback/index.html
+++ b/feedback/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-            Feedback &middot; Wisdom as a Service
+            Tour Feedback &middot; Wisdom as a Service
     </title>    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@wisdomtour">
     <meta name="twitter:creator" content="@wisdomtour">
@@ -40,6 +40,7 @@
     <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script src="/assets/js/jquery.bxslider.js"></script>
+    <script src="/assets/js/site.js"></script>
 </head>
 <body>
 <div class="container">
@@ -71,9 +72,31 @@
     </header>
 
     <div class="content">
-                    <div class="marquee">Feedback</div>
-<div class="body standard-text">
-fgh
+                    <div class="marquee">Tour Feedback</div>
+<br />
+<ul class="nav nav-tabs" id="feedback">
+    <li class="active"><a href="#joindin">JoindIn</a></li>
+    <li><a href="#twitter">Twitter</a></li>
+    <li><a href="#blogs">Blogs</a></li>
+    <li><a href="#email">Email</a></li>
+</ul>
+<div class="tab-content">
+    <div id="joindin" class="tab-pane fade in active">
+        <br />
+    </div>
+    <div id="twitter" class="tab-pane fade">
+        <br />
+    </div>
+    <div id="blogs" class="tab-pane fade">
+        <br />
+    </div>
+    <div id="email" class="tab-pane fade">
+        <br />
+    </div>
+</div>
+<br />
+<div class="outro">
+    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
 </div>                <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/wisdomworldtour"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
