--- a/about/index.html
+++ b/about/index.html
@@ -40,6 +40,7 @@
     <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script src="/assets/js/jquery.bxslider.js"></script>
+    <script src="/assets/js/site.js"></script>
 </head>
 <body>
 <div class="container">
@@ -100,6 +101,9 @@
 <div class="marquee">About the Speakers</div>
 <div class="body standard-text">
              <div class="speaker">
+            <a href="/speakers/davey-shafek" style="font-weight:400" id="davey-shafek">Davey Shafek</a>...
+
+    </div>            <div class="speaker">
             <a href="/speakers/ed-finkler" style="font-weight:400" id="ed-finkler">Ed Finkler</a>, also known as <a href="//twitter.com/funkatron">Funkatron</a>, started making web sites before 
 browsers had frames. He does front-end and server-side work in Python, PHP, and JavaScript. He served as web 
 lead and security researcher at <a href="//www.cerias.purdue.edu">The Center for Education and Research 
@@ -118,6 +122,12 @@ podcast</a>. He believes quality code, testing, and automation are necessary ing
 software project. When not hacking away at code he is a father and husband, beer and Scotch enthusiast, and an amateur 
 photographer. Follow Jeff on Twitter as <a href='//twitter.com/@jcarouth'>jcarouth</a> or read his blog at 
 <a href="//carouth.com">carouth.com</a>.
+
+    </div>            <div class="speaker">
+            <a href="/speakers/jeremy-mikola" style="font-weight:400" id="jeremy-mikola">Jeremy Mikola</a>...
+
+    </div>            <div class="speaker">
+            <a href="/speakers/julia-nguyen" style="font-weight:400" id="julia-nguyen">Julia Nguyen</a>... She is part of <a href="//prompt.engineyard.com">Engine Yard's Prompt</a> campaign.
 
     </div>    </div>
 <div class="outro">
