--- a/events/phptek/index.html
+++ b/events/phptek/index.html
@@ -42,6 +42,7 @@ Tutorial: Wax On, Wax Off: Code Kata Dojo - Yitzchok Willroth
     <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script src="/assets/js/jquery.bxslider.js"></script>
+    <script src="/assets/js/site.js"></script>
 </head>
 <body>
 <div class="container">
